feat: stack character builds and remix broadcast battles
